Fix #125070: Handle "Unit Scale" correctly in the STL and PLY importers

When importing an STL file with the "Scene Unit" option enabled, we
should divide by the Unit Scale instead of multiply (which was already
done when Exporting with "Unit Scale" enabled)

The PLY importer had the same issue.

The prior "legacy" implementation did this correctly:
https://projects.blender.org/blender/blender-addons/src/commit/b42d68627734cb18af0e6f41537063984313a284/io_mesh_stl/__init__.py#L110

Co-authored-by: Jesse Yurkovich <jesse.y@gmail.com>
Pull Request: https://projects.blender.org/blender/blender/pulls/124718